Fix fix for navbar on about page for desktop

--- a/app/assets/stylesheets/mediaqueries/_s.scss
+++ b/app/assets/stylesheets/mediaqueries/_s.scss
@@ -260,6 +260,10 @@
       padding-top: 0;
     }
 
+    &.template--pages-about{
+      padding-top: 100px;
+    }
+
     &.content-main--invalid_location {
       padding-top: 80px;
     }
