Put faq link back into footer

--- a/app/assets/stylesheets/modules/_mascot.scss
+++ b/app/assets/stylesheets/modules/_mascot.scss
@@ -11,7 +11,7 @@
 
 .mascot--footer {
   right: 350px;
-  bottom: -20px; // change back to '0' once faq link comes back
+  bottom: 0px;
   width: 120px;
   height: 150px;
   background-image: image-url('clara-t.svg');
