--- a/app/views/layouts/partials/_footer.html.slim
+++ b/app/views/layouts/partials/_footer.html.slim
@@ -43,8 +43,8 @@ footer.footer-main
             ul.nav-site__list
               li.nav-site__listitem
                 = link_to t('.about'), '/ueber-uns'
-              / li.nav-site__listitem
-              /   = link_to t('.faq'), '/haeufige-fragen'
+              li.nav-site__listitem
+                = link_to t('.faq'), '/haeufige-fragen'
               li.nav-site__listitem
                 = link_to t('.contact'), new_contact_path
 
