Cleanup - replace first welcome mail with new one

--- a/app/views/broadcast_mailer/welcome.html.haml
+++ b/app/views/broadcast_mailer/welcome.html.haml
@@ -1,6 +1,5 @@
 %p
-  Liebe(r)
-  = @contact_person.name + ','
+  Sehr geehrte Damen und Herren,
 
 %p
   seit dieser Woche sind Sie mit Ihrem Unterstützungsangebot für Kinder, Jugendliche und Familien über das neue Portal
