--- a/app/views/broadcast_mailer/welcome.text.erb
+++ b/app/views/broadcast_mailer/welcome.text.erb
@@ -1,5 +1,5 @@
 
-Liebe(r) <%= @contact_person.name + ',' %>
+Sehr geehrte Damen und Herren,
 
 seit dieser Woche sind Sie mit Ihrem Unterstützungsangebot für Kinder, Jugendliche und Familien über das neue Portal http://www.clarat.org' zu finden.
 
