Experimenting with internal faq links

--- a/app/views/pages/faq.html.slim
+++ b/app/views/pages/faq.html.slim
@@ -22,7 +22,8 @@
             == t '.section_one.answer_three',
               how_to_find_offers: \
               link_to('Hier',
-                      '/haeufige-fragen/#how_to_find_offers')
+                      '/haeufige-fragen/#how_to_find_offers',
+                      class: 'FAQ_anchor_link')
           h4.FAQ_question = t '.section_one.question_four'
           .FAQ_paragraph
             == t '.section_one.answer_four',
