--- a/app/views/broadcast_mailer/welcome.text.erb
+++ b/app/views/broadcast_mailer/welcome.text.erb
@@ -1,10 +1,13 @@
 
 Sehr geehrte Damen und Herren,
 
-seit dieser Woche sind Sie mit Ihrem Unterstützungsangebot für Kinder, Jugendliche und Familien über das neue Portal http://www.clarat.org' zu finden.
+seit Kurzem sind Sie mit Ihrem Unterstützungsangebot für Kinder, Jugendliche und Familien über das neue Portal http://www.clarat.org' zu finden.
 
-Ihr Angebot heißt bei clarat "<%= @offer.name %>" und Sie finden es hier:
-<%= offer_url(@offer) %>
+Ihre Angebote heißen bei clarat:
+<%- @offers.each do |offer| %>
+- "<%= offer.name %>", zu finden unter folgendem Link:
+  <%= offer_url(offer) %>
+<%- end %>
 
 Fehlt etwas? Das kann sein. Denn wir sind auch weiterhin dabei, stetig Angebote zu ergänzen. Deshalb kommt es vor, dass wir noch nicht alle Angebote einer Organisation erfasst haben.
 
