--- a/app/views/layouts/partials/_general_assets.html.slim
+++ b/app/views/layouts/partials/_general_assets.html.slim
@@ -4,8 +4,9 @@
 javascript:
   document.locale = "#{I18n.locale}";
 
-= javascript_include_tag 'vendor/modernizr.custom.js'
-= javascript_include_tag 'application', 'data-turbolinks-track' => true
+- cache 'general_scripts' do
+  = javascript_include_tag 'vendor/modernizr.custom.js'
+  = javascript_include_tag 'application', 'data-turbolinks-track' => true
 
 - if turbolinks_request?
   javascript:
@@ -17,16 +18,16 @@ javascript:
                            cache: 'google_maps_apiv3'
 
 
-/ Browser dependent code
+- cache 'browser_dependent_code' do
 
-/[if lt IE 9]
-  = javascript_include_tag '//html5shiv.googlecode.com/svn/trunk/html5.js'
-  = javascript_include_tag asset_url('vendor/selectivizr-min.js')
-/[if !IE]
-  javascript:
-    if (Function('/*@cc_on return document.documentMode===10@*/')()) {
-      document.documentElement.className += ' ie10';
-    }
-    if (typeof document.documentMode !== 'undefined' && document.documentMode === 11) {
-      document.documentElement.className += ' ie11';
-    }
+  /[if lt IE 9]
+    = javascript_include_tag '//html5shiv.googlecode.com/svn/trunk/html5.js'
+    = javascript_include_tag asset_url('vendor/selectivizr-min.js')
+  /[if !IE]
+    javascript:
+      if (Function('/*@cc_on return document.documentMode===10@*/')()) {
+        document.documentElement.className += ' ie10';
+      }
+      if (typeof document.documentMode !== 'undefined' && document.documentMode === 11) {
+        document.documentElement.className += ' ie11';
+      }
