Remove duplicate faq question

--- a/app/views/pages/faq.html.slim
+++ b/app/views/pages/faq.html.slim
@@ -151,14 +151,7 @@
                 li
                   = t '.section_four.answer_six_bullet_seven'
           h4.FAQ_question = t '.section_four.question_seven'
-          .FAQ_paragraph
-            == t '.section_four.answer_seven',
-              what_offers: \
-              link_to('hier',
-                      '/haeufige-fragen/#what_offers',
-                      class: 'FAQ_anchor_link')
-          h4.FAQ_question = t '.section_four.question_eight'
-          .FAQ_paragraph == t '.section_four.answer_eight'
+          .FAQ_paragraph == t '.section_four.answer_seven'
 
       section
         h3.section-question-group__headline = t '.section_five.heading'
