prepare BroadcastMailer for 4th mail batch

--- a/app/views/broadcast_mailer/welcome.html.haml
+++ b/app/views/broadcast_mailer/welcome.html.haml
@@ -1,5 +1,6 @@
 %p
-  Sehr geehrte Damen und Herren,
+  Liebe(r)
+  = @contact_person.name.strip + ','
 
 %p
   seit Kurzem sind Sie mit Ihrem Unterstützungsangebot für Kinder, Jugendliche und Familien über das neue Portal
