--- a/app/views/broadcast_mailer/welcome.text.erb
+++ b/app/views/broadcast_mailer/welcome.text.erb
@@ -1,5 +1,5 @@
 
-Sehr geehrte Damen und Herren,
+Liebe(r) <%= @contact_person.name %>,
 
 seit Kurzem sind Sie mit Ihrem Unterstützungsangebot für Kinder, Jugendliche und Familien über das neue Portal http://www.clarat.org' zu finden.
 
