--- a/app/views/offers/index.html.slim
+++ b/app/views/offers/index.html.slim
@@ -14,15 +14,16 @@
 
   aside.aside-standard
     .aside-standard__container
-      h5.aside-standard__headline = I18n.t('offers.map.headline_small_map')
+      h5.aside-standard__headline
+        = t('.map.headline_small_map')
 
       #map-container
         #map-canvas
 
-      a.map__button--enlarge.big-map_open[href="#big-map"] = I18n.t('offers.map.enlarge_map')
+      a.map__button--enlarge.big-map_open[href="#big-map"]
+        = t('.map.enlarge_map')
 
       #big-map
-
          button.big-map_close X
 
 / Alert user when we used default location because they didn't give one
