--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -20,12 +20,13 @@ html class='no-js' lang=I18n.locale
                      type: message[0],
                      content: message[1]
       - if controller_name == 'pages' && action_name == 'home'
-        = render 'layouts/partials/navigation', search_cache: @search_cache
+        = render 'layouts/partials/navigation', search_form: SearchForm.new
       - else
         = render 'layouts/partials/search_navigation',
-                 search_cache: @search_cache
+                 search_form: @search_form || SearchForm.new
       = yield
-    = render 'layouts/partials/footer', subscription: @subscription
+    = render 'layouts/partials/footer',
+             subscription: @subscription || Subscription.new
 
     = render 'layouts/partials/general_assets'
     = content_for :view_specific_scripts
