--- a/app/views/layouts/partials/_search_navigation.html.slim
+++ b/app/views/layouts/partials/_search_navigation.html.slim
@@ -4,5 +4,5 @@ header.header-main
     .mascot.mascot--header
 
     .Distributor.Distributor--navigation
-      = render '/offers/shared/search_form', search_cache: search_cache,
+      = render '/offers/shared/search_form', search_form: search_form,
                                              labels: :short
