--- a/app/views/offers/index/_categories_nest.html.slim
+++ b/app/views/offers/index/_categories_nest.html.slim
@@ -3,12 +3,12 @@
     - set.each do |category, children|
       - name = category.name
       li.Categories__listitem(
-        class=category_list_classes(search_cache, name, depth, children)
+        class=category_list_classes(search_form, name, depth, children)
       )
         = link_to name,
-                  offers_path(search_form: search_cache.category_focus(name)),
+                  offers_path(search_form: search_form.category_focus(name)),
                   class: 'btn', data: { category: name }
 
         = render 'offers/index/categories_nest', set: children, facets: facets,
-                                                 search_cache: search_cache,
+                                                 search_form: search_form,
                                                  depth: (depth + 1)
