--- a/app/views/offers/shared/_search_form.html.slim
+++ b/app/views/offers/shared/_search_form.html.slim
@@ -1,5 +1,5 @@
-= simple_form_for search_cache, url: offers_path, # namespace: 'nav',
-                                html: { method: :get, novalidate: false } do |f|
+= simple_form_for search_form, url: offers_path, # namespace: 'nav',
+                               html: { method: :get, novalidate: false } do |f|
   = f.input :query, label: t('.query_label'),
                     required: false,
                     input_html: { \
