For #87: Styling proposal shariff items

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -63,5 +63,4 @@
 @import "vendor/twitter-typeahead_override";
 @import "vendor/places-autocomplete_override";
 @import "vendor/formtastic";
-
-@import "shariff";
+@import "vendor/shariff_override";
