--- a/app/assets/stylesheets/modules/_mascot.scss
+++ b/app/assets/stylesheets/modules/_mascot.scss
@@ -14,7 +14,7 @@
   bottom: 0px;
   width: 120px;
   height: 150px;
-  background-image: image-url('clara-t.svg');
+  background-image: image-url('mascot--footer.svg');
   background-size: 120px auto;
 
   .template--pages-home & {
@@ -29,15 +29,15 @@
   height: 126px;
 
   .template--offers-index & {
-    background-image: image-url('reading-clara-t.svg');
+    background-image: image-url('mascot--index.svg');
   }
 
   .template--offers-show & {
-    background-image: image-url('searching-clara-t_offer.svg');
+    background-image: image-url('mascot--show.svg');
   }
 
   .template--organizations-show & {
-    background-image: image-url('searching-clara-t_organisation.svg');
+    background-image: image-url('mascot--organization.svg');
   }
 
   .template--pages-about & {
