--- a/app/views/offers/index/_pending_ajax.html.slim
+++ b/app/views/offers/index/_pending_ajax.html.slim
@@ -8,7 +8,7 @@
 - content_for :view_specific_scripts do
 
   javascript:
-    Clarat.Search.controller.create()
+    Clarat.Search.presenter.create()
     // Clarat.Ajax.replace(
     //   $('.content-main'), window.location.href, { historyPush: false }
     // );
