--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -38,6 +38,7 @@
 @import "modules/js-cookie-warning";
 @import "modules/js-modal";
 @import "modules/table";
+@import "modules/noscript";
 
 @import "modules/sections/section-content";
 @import "modules/sections/section-start";
