--- a/app/views/broadcast_mailer/welcome.html.haml
+++ b/app/views/broadcast_mailer/welcome.html.haml
@@ -1,6 +1,5 @@
 %p
-  Liebe(r)
-  = @contact_person.name.strip + ','
+  Sehr geehrte Damen und Herren,
 
 %p
   seit Kurzem sind Sie mit Ihrem Unterstützungsangebot für Kinder, Jugendliche und Familien über das neue Portal
@@ -8,14 +7,22 @@
   zu finden.
 
 %p
-  Ihre Angebote heißen bei clarat:
-  %ul
-    - @offers.each do |offer|
-      %li
-        = '"' + offer.name.strip + '",'
-        zu finden unter folgendem Link:
-        %br
-        = link_to offer_url(offer), offer_url(offer)
+  - if @offers.count == 1
+    Ihr Angebot heißt bei clarat:
+    %br
+    = '"' + @offers.first.name.strip + '",'
+    zu finden unter folgendem Link:
+    %br
+    = link_to offer_url(@offers.first), offer_url(@offers.first)
+  - else
+    Ihre Angebote heißen bei clarat:
+    %ul
+      - @offers.each do |offer|
+        %li
+          = '"' + offer.name.strip + '",'
+          zu finden unter folgendem Link:
+          %br
+          = link_to offer_url(offer), offer_url(offer)
 
 %p
   Fehlt etwas? Das kann sein. Denn wir sind auch weiterhin dabei, stetig Angebote zu ergänzen. Deshalb kommt es vor, dass wir noch nicht alle Angebote einer Organisation erfasst haben.
