for #273 - move files around

--- a/app/views/layouts/partials/_javascript_config.html.slim
+++ b/app/views/layouts/partials/_javascript_config.html.slim
@@ -1,10 +1,12 @@
 / General JS Setup
 javascript:
   // Namespace
-  Clarat = { Search: {} }
-
-  // Algolia
-  Clarat.Search.appID = "#{Rails.application.secrets.algolia['app_id']}";
-  Clarat.Search.apiKey = "#{Rails.application.secrets.algolia['pub_key']}";
-  Clarat.Search.personalIndexName = "#{Offer.personal_index_name}";
-  Clarat.Search.remoteIndexName = "#{Offer.remote_index_name}";
+  window.Clarat = { 
+    // Algolia
+    Algolia: {
+      appID: "#{Rails.application.secrets.algolia['app_id']}",
+      apiKey: "#{Rails.application.secrets.algolia['pub_key']}",
+      personalIndexName: "#{Offer.personal_index_name}",
+      remoteIndexName: "#{Offer.remote_index_name}"
+    } 
+  };
