for #273, referencing #316 - only call nearby and facet queries on location change

--- a/app/views/offers/index/_pending_ajax.html.slim
+++ b/app/views/offers/index/_pending_ajax.html.slim
@@ -8,7 +8,8 @@
 - content_for :view_specific_scripts do
 
   javascript:
-    Clarat.Search.Presenter.get().sendSearch()
+    Clarat.Search.Presenter.get().sendMainSearch()
+    Clarat.Search.Presenter.get().sendSupportSearch()
     // Clarat.Ajax.replace(
     //   $('.content-main'), window.location.href, { historyPush: false }
     // );
