for #273 - fix part of the test suite, remove some unnecessary files

--- a/app/views/offers/shared/_search_form.html.slim
+++ b/app/views/offers/shared/_search_form.html.slim
@@ -24,7 +24,7 @@
                                     input_html: { \
                                       class: 'JS-Geolocation__input',
                                       value: default_geolocation }
-  = f.input :geolocation, as: :hidden
+  / = f.input :geolocation, as: :hidden
   = f.input :category, as: :hidden
   = f.input :exact_location, as: :hidden
   = f.input :contact_type, as: :hidden
