--- a/app/views/broadcast_mailer/welcome.text.erb
+++ b/app/views/broadcast_mailer/welcome.text.erb
@@ -1,5 +1,6 @@
-
-Sehr geehrte Damen und Herren,
+<%- if @contact_person.gender == 'male' %>
+Lieber Herr<%- else %>
+Liebe Frau<%- end %> <%= @contact_person.last_name %>,
 
 seit Kurzem sind Sie mit Ihrem Unterstützungsangebot für Kinder, Jugendliche und Familien über das neue Portal http://www.clarat.org zu finden.
 
