first basic implementation of trailblazerb

--- a/app/views/contact_mailer/admin_notification.text.erb
+++ b/app/views/contact_mailer/admin_notification.text.erb
@@ -1,7 +1,7 @@
-Name: <%= @contact.name %>
-Email: <%= @contact.email %>
-Erstellt: <%= @contact.created_at %>
-URL: <%= @contact.url %>
+Name: <%= @feedback.name %>
+Email: <%= @feedback.email %>
+Erstellt: <%= @feedback.created_at %>
+URL: <%= @feedback.url %>
 
 Nachricht:
-<%= @contact.message %>
+<%= @feedback.message %>
