--- a/app/views/feedbacks/shared/_new.html.slim
+++ b/app/views/feedbacks/shared/_new.html.slim
@@ -1,6 +1,6 @@
 - if reporting
   = t('.send_us_a_message')
-= simple_form_for contact,
+= simple_form_for feedback,
                     html: { class: 'contact-form' },
                     remote: reporting do |f|
   = f.input :name, label: false,
