--- a/app/views/layouts/partials/_banner.html.slim
+++ b/app/views/layouts/partials/_banner.html.slim
@@ -5,4 +5,4 @@
 = modal_for 'beta_banner' do
   p
     = t '.beta_modal.text'
-    = link_to t('.beta_modal.link'), new_contact_path
+    = link_to t('.beta_modal.link'), new_feedback_path
