--- a/app/views/layouts/partials/_footer.html.slim
+++ b/app/views/layouts/partials/_footer.html.slim
@@ -46,7 +46,7 @@ footer.footer-main
               li.nav-site__listitem
                 = link_to t('.faq'), '/haeufige-fragen'
               li.nav-site__listitem
-                = link_to t('.contact'), new_contact_path
+                = link_to t('.contact'), new_feedback_path
 
   - cache 'footer_links_3' do
 
