--- a/app/views/organizations/show.html.slim
+++ b/app/views/organizations/show.html.slim
@@ -64,7 +64,7 @@
         = t 'shareds.show.cta_report_errors'
 
       = modal_for 'js-report-overlay' do
-        = render '/contacts/shared/new', contact: @contact, reporting: true
+        = render '/contacts/shared/new', contact: @feedback, reporting: true
 
 / - content_for :view_specific_scripts do
 /   = javascript_include_tag "gmaps_search_results.js"
