--- a/app/views/broadcast_mailer/welcome.text.erb
+++ b/app/views/broadcast_mailer/welcome.text.erb
@@ -1,8 +1,13 @@
-<%- if @contact_person.last_name.blank? %>
+<%- if !@contact_person.last_name? && !@contact_person.first_name? %>
 Sehr geehrte Damen und Herren,
-<%- else %><%- if @contact_person.gender == 'male' %>
+<%- elsif @contact_person.last_name? %>
+<%- if @contact_person.gender == 'male' %>
 Lieber Herr<%- else %>
-Liebe Frau<%- end %> <%= @contact_person.last_name %>,
+Liebe Frau<%- end %><%= @contact_person.last_name %>,
+<%- elsif @contact_person.first_name? %>
+<%- if @contact_person.gender == 'male' %>
+Lieber<%- else %>
+Liebe<%- end %><%= @contact_person.first_name %>,
 <%- end %>
 
 seit Kurzem sind Sie mit Ihrem Unterstützungsangebot für Kinder, Jugendliche und Familien über das neue Portal http://www.clarat.org zu finden.
