Hide Whatsapp-Button on desktop

--- a/app/views/offers/show.html.slim
+++ b/app/views/offers/show.html.slim
@@ -71,7 +71,7 @@
 
   / mobile share buttons
   .shariff data={ lang: I18n.locale, \
-                  services: '["facebook", "twitter", "whatsapp", "mail"]', \
+                  services: '["mail", "whatsapp", "facebook", "twitter"]', \
                   'twitter-via' => 'claratpunktorg' }
 
   / - content_for :view_specific_scripts do
