--- a/app/views/offers/show.html.slim
+++ b/app/views/offers/show.html.slim
@@ -71,8 +71,7 @@
 
   / mobile share buttons
   .shariff data={ lang: I18n.locale, \
-                  services: '["mail", "whatsapp", "facebook", "twitter"]', \
-                  'twitter-via' => 'claratpunktorg' }
+                  services: '["mail", "whatsapp", "facebook", "twitter"]' }
 
   / - content_for :view_specific_scripts do
   /   = javascript_include_tag "gmaps_search_results.js"
