--- a/app/views/offers/show.html.slim
+++ b/app/views/offers/show.html.slim
@@ -71,7 +71,8 @@
 
   / mobile share buttons
   .shariff data={ lang: I18n.locale, \
-                  services: '["mail", "whatsapp", "facebook", "twitter"]' }
+                  services: '["mail", "whatsapp", "facebook", "twitter"]', \
+                  'mail-url' => 'mailto:' }
 
   / - content_for :view_specific_scripts do
   /   = javascript_include_tag "gmaps_search_results.js"
