start refactoring views - still a lot of junk lying around

--- a/app/views/offers/show.html.slim
+++ b/app/views/offers/show.html.slim
@@ -1,73 +1,4 @@
 - provide(:title, @offer.name )
 .wrapper-inner class="#{'no-location' unless @location}"
   main.content-main.content-main--wide
-    - cache [@offer, 'page_header'] do
-
-      header.page-detail__header
-        h2.page-detail__title= @offer.name
-        /.page-detail__icons
-        /  - @offer.categories.mains.each do |main_tag|
-        /    .page-detail__icon title=main_tag.name class="page-detail__icon--#{main_tag.icon}"
-
-    / Left side (in desktop)
-    .section-wrapper-major
-      - cache [@offer, 'general_info'] do
-
-        / What's it all about?
-        section.section-content.section-content--what
-          h3.section-content__title = t '.what'
-          .section-content__body
-            == @offer.description_html
-
-        / What to do next?
-        section.section-content.section-content--nextsteps
-          h3.section-content__title
-            = t '.next_steps'
-          .section-content__body
-            == @offer.next_steps_html
-
-      / Who is offering this service?
-      = render 'offers/show/who_section', offer: @offer
-
-      / Internet Presence
-      = render 'offers/show/website_section', offer: @offer
-
-    / Right side (in desktop)
-    .section-wrapper-minor
-
-      section.section-content.section-content--whos-offering
-        h3.section-content__title
-          = t '.who'
-
-        .section-content__body
-
-          - if @offer.location
-            - cache [@offer.location, 'offer_show_map']
-
-              #map-container
-                #map-data data={ markers: @markers.to_json }
-                #map-canvas
-
-            = render 'offers/show/who_location', offer: @offer,
-                                               markers: @markers
-
-          ul.Listing-organizations__list
-            - @offer.organizations.each do |orga|
-              li.Listing-organizations__link = link_to orga.name, organization_path(id: orga)
-
-      / When can you contact them?
-      - if @offer.opening_details?
-        - cache [@offer, 'openings'] do
-          = render 'offers/show/opening_section', offer: @offer
-
-
-      / Found any mistakes?
-      = link_to new_feedback_path,
-                class: 'offer-contribute js-report-overlay_open' do
-        i.fa.fa-exclamation-triangle
-        = t 'shareds.show.cta_report_errors'
-      = modal_for 'js-report-overlay' do
-        = render '/contacts/shared/new', feedback: @feedback, reporting: true
-
-/- content_for :view_specific_scripts do
-/  = javascript_include_tag "gmaps_search_results.js"
+    = concept('offer/cell', @offer)
