--- a/app/views/offers/show/_who_contact_people.html.slim
+++ b/app/views/offers/show/_who_contact_people.html.slim
@@ -1,6 +1,6 @@
 ul.section-content--contact-person-list
-  / TODO: Order by no name first
-  - offer_contacts = offer.contact_people.order('name DESC')
+  / TODO: Refactor (Rethink order)
+  - offer_contacts = offer.contact_people.order('last_name DESC')
   - offer_contacts.each_with_index do |contact, index|
     - cache [offer, contact] do
       li
@@ -22,9 +22,6 @@ ul.section-content--contact-person-list
           br
         - elsif contact.operational_name?
           = "#{contact.operational_name}"
-          br
-        - elsif contact.name?
-          = "#{t '.person'} #{contact.name}"
           br
 
         - if contact.local_number_1?
