--- a/app/views/offers/index/_advanced_search.html.slim
+++ b/app/views/offers/index/_advanced_search.html.slim
@@ -30,17 +30,18 @@
                             boolean_style: :inline,
                             collection: \
                               i18n_collection(AgeFilter::IDENTIFIER, true)
-      .col-form-inner
-        fieldset.filter-form__fieldset
-          legend.filter-form__fieldset__headline
-            = t '.fieldset_headline_target-group'
-          = f.input :audience_filter,
-                            item_wrapper_class: 'filter-form__radio',
-                            as: :radio_buttons,
-                            label: false,
-                            boolean_style: :inline,
-                            collection: \
-                              i18n_collection(AudienceFilter::IDENTIFIER, true)
+      / AudienceFilter will be removed
+      / .col-form-inner
+      /   fieldset.filter-form__fieldset
+      /     legend.filter-form__fieldset__headline
+      /       = t '.fieldset_headline_target-group'
+      /     = f.input :audience_filter,
+      /                       item_wrapper_class: 'filter-form__radio',
+      /                       as: :radio_buttons,
+      /                       label: false,
+      /                       boolean_style: :inline,
+      /                       collection: \
+      /                         i18n_collection(AudienceFilter::IDENTIFIER, true)
       .col-form-inner
         fieldset.filter-form__fieldset.filter-form__fieldset--last
           legend.filter-form__fieldset__headline
