Change cookie warning color to not interfere with live chat

--- a/app/assets/stylesheets/modules/_js-cookie-warning.scss
+++ b/app/assets/stylesheets/modules/_js-cookie-warning.scss
@@ -3,7 +3,7 @@
   bottom: 0;
   padding: 10px 30px 10px 10px;
   width: 100%;
-  background: $brand_orange;
+  background: $brand_grey;
   color: white;
   font-size: 13px;
   z-index: 1000;
