Make sure cookie warning is shown above live chat

--- a/app/assets/stylesheets/modules/_js-cookie-warning.scss
+++ b/app/assets/stylesheets/modules/_js-cookie-warning.scss
@@ -6,7 +6,7 @@
   background: $brand_grey;
   color: white;
   font-size: 13px;
-  z-index: 1000;
+  z-index: 1000000;
   text-align: center;
 
   a {
