for #379 - send emails after a new offer has been approved

--- a/app/views/offer_mailer/inform.html.haml
+++ b/app/views/offer_mailer/inform.html.haml
@@ -85,7 +85,7 @@ an oder besuchen Sie unseren
 
 %p
   P.S. Dies ist eine einmalige Informationsemail für Sie. Falls Sie weiterhin informiert werden möchten, wenn Angebote auf clarat mit Ihnen als Kontaktperson aufgenommen werden, dann klicken Sie bitte
-  = link_to('hier', '#') + '.'
+  = link_to('hier', @subscribe_href) + '.'
   Wir werden Ihnen keine Werbung senden.
   %br
   Wenn Sie keine weiteren Emails von uns wünschen, brauchen Sie nichts weiter tun. Wir werden Sie dann nicht noch einmal anschreiben.
