--- a/app/views/offer_mailer/inform.text.erb
+++ b/app/views/offer_mailer/inform.text.erb
@@ -51,6 +51,6 @@ Französische Straße 47
 Tel.: +49 (0)30 55 57 96 00
 
 P.S. Dies ist eine einmalige Informationsemail für Sie. Falls Sie weiterhin informiert werden möchten, wenn Angebote auf clarat mit Ihnen als Kontaktperson aufgenommen werden, dann besuchen Sie bitte folgenden Link:
-<%= '#' %>
+<%= @subscribe_href %>
 Wir werden Ihnen keine Werbung senden.
 Wenn Sie keine weiteren Emails von uns wünschen, brauchen Sie nichts weiter tun. Wir werden Sie dann nicht noch einmal anschreiben.
